More html compliant and no more font tags.

--- a/about-me.html
+++ b/about-me.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 
 	<style>td { padding: 3px; border: 0 none; }</style>
@@ -54,7 +55,7 @@
 							School
 						</td>
 						<td>
-							Computer Information Systems at <font color="#800000">Ferris </font><font color="#808000">State </font><font color="#800000">University</font>
+							Computer Information Systems at <span class="ferris">Ferris </span><span class="state">State </span><span class="ferris">University</span>
 						</td>
 					</tr>    
 					<tr>
@@ -91,7 +92,7 @@
 							Drinks
 						</td>
 						<td>
-							<font color="#00FF00">Mountain</font> <font color="#FF0000">Dew</font>, Chocolate Shakes, Slurpees
+							<span class="mountain">Mountain</span> <span class="dew">Dew</span>, Chocolate Shakes, Slurpees
 						</td>
 					</tr>    
 					<tr>
@@ -127,6 +128,6 @@
 			</table>
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
