--- a/colors.html
+++ b/colors.html
@@ -1,62 +1,53 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	
+	<style>td { padding: 3px; text-align: center; }</style>	
 	<div id="body">
 		<div class="article">
-
 			<h1>Colored Drawings</h1>
 			<p>These are various drawings I've colored digitally. (Drawings are clickable and lead to a larger version.)</p>
-
-<table width=100%>
-	
-	<tr>
-		<td align=center width=25%>
-			<a href="images/colorplain.jpg"><img border="0" src="thumbs/colorplain.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colorelf01.jpg"><img border="0" src="thumbs/colorelf01.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colorgirl3.jpg"><img border="0" src="thumbs/colorgirl3.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colorElbo.jpg"><img border="0" src="thumbs/colorElbo.jpg"></a><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td align=center width=25%>
-			<a href="images/colorknightlink.jpg"><img border="0" src="thumbs/colorknightlink.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colorcoolninja.jpg"><img border="0" src="thumbs/colorcoolninja.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colortroy.jpg"><img border="0" src="thumbs/colortroy.jpg"></a><br>
-		</td>
-		
-		<td align=center width=25%>
-			<a href="images/colorwangninjah2.jpg"><img border="0" src="thumbs/colorwangninjah2.jpg"></a><br>
-		</td>
-	</tr>
-	
-</table>
-
+			<table>
+				<tbody>
+					<tr>
+						<td width="25%">
+							<a href="images/colorplain.jpg"><img src="thumbs/colorplain.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colorelf01.jpg"><img src="thumbs/colorelf01.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colorgirl3.jpg"><img src="thumbs/colorgirl3.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colorElbo.jpg"><img src="thumbs/colorElbo.jpg"></a><br>
+						</td>
+					</tr>				
+					<tr>
+						<td width="25%">
+							<a href="images/colorknightlink.jpg"><img src="thumbs/colorknightlink.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colorcoolninja.jpg"><img src="thumbs/colorcoolninja.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colortroy.jpg"><img src="thumbs/colortroy.jpg"></a><br>
+						</td>						
+						<td width="25%">
+							<a href="images/colorwangninjah2.jpg"><img src="thumbs/colorwangninjah2.jpg"></a><br>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
