--- a/comics.html
+++ b/comics.html
@@ -1,89 +1,92 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	
+	<style>td { padding: 6px; }</style>
+
 	<div id="body">
 		<div class="article">
-
 			<h1>Comics</h1>
 			<p>Some comics I have drawn.</p>
 			<table>
-				<tr>
-					<td width="334">
-						<a href="images/teacher03.jpg"><img border="0" src="thumbs/teacher03.jpg" width="244" height="150"></a>
-					</td>
-		    		<td colspan="3" width="465">
-		    			<a href="images/teacher02.jpg"><img border="0" src="thumbs/teacher02.jpg" width="416" height="150"></a>
-		    		</td>
-				</tr>
-				<tr>
-					<td width="334" style="padding: 6px; vertical-align: top;">
-						I won't stand for any independent thinking in this room. If you're not thinking like me, you're not thinking.
-					</td>
-					<td width="148" style="padding: 6px; vertical-align: top;">
-						I have a question.
-					</td>
-					<td colspan="2" width="311" style="padding: 6px; vertical-align: top;">
-						Well, that's not right.
-						<br>
-						You should consider not having a question.
-					</td>
-				</tr>
-				<tr>
-					<td width="334">
-						<a href="images/teacher05.jpg"><img border="0" src="thumbs/teacher05.jpg" width="271" height="150"></a>
-					</td>
-					<td colspan="3" width="465"><a href="images/teacher07.jpg">
-						<img border="0" src="thumbs/teacher07.jpg" width="463" height="150"></a>
-					</td>
-				</tr>
-				<tr>
-					<td width="334" style="padding: 6px; vertical-align: top;">
-						Who wants to touch my briefcase? Come on people.
-					</td>
-					<td width="148" style="padding: 6px; vertical-align: top;">
-						Wait, wait, wait...
-					</td>
-					<td width="151" style="padding: 6px; vertical-align: top;">
-						Don't Sharpen your pencil, I'm thinking.
-					</td>
-					<td width="154" style="padding: 6px; vertical-align: top;">
-						Okay, I'm done thinking now.
-					</td>
-				</tr>
-				<tr>
-					<td width="334">
-						<a href="images/teacher04.jpg"><img border="0" src="thumbs/teacher04.jpg" width="332" height="150"></a>
-					</td>
-					<td colspan="2" width="305">
-						<a href="images/teacher06.jpg"><img border="0" src="thumbs/teacher06.jpg" width="202" height="150"></a>
-					</td>
-					<td width="154">
-						<a href="images/teacher01.jpg"><img border="0" src="thumbs/teacher01.jpg" width="146" height="150"></a>
-					</td>
-				</tr>
-				<tr>
-					<td width="334" style="padding: 6px; vertical-align: top;">
-						If any of you can figure out a way to make your learning less of an inconvenience for me I would greatly appreciate it.
-					</td>
-					<td colspan="2" width="305" style="padding: 6px; vertical-align: top;">
-						Wait here, I'm going out in the hall to praise myself.
-					</td>
-					<td width="154" style="padding: 6px; vertical-align: top;">
-						These were all based on an actual teacher who said these things. Some of the words may have changed slightly because they are not in context, but the meaning is the same.
-					</td>
-				</tr>
+				<tbody>
+					<tr>
+						<td width="334">
+							<a href="images/teacher03.jpg"><img src="thumbs/teacher03.jpg" width="244" height="150"></a>
+						</td>
+						<td colspan="3" width="465">
+							<a href="images/teacher02.jpg"><img src="thumbs/teacher02.jpg" width="416" height="150"></a>
+						</td>
+					</tr>
+					<tr>
+						<td width="334">
+							I won't stand for any independent thinking in this room. If you're not thinking like me, you're not thinking.
+						</td>
+						<td width="148">
+							I have a question.
+						</td>
+						<td colspan="2" width="311">
+							Well, that's not right.
+							<br>
+							You should consider not having a question.
+						</td>
+					</tr>
+					<tr>
+						<td width="334">
+							<a href="images/teacher05.jpg"><img src="thumbs/teacher05.jpg" width="271" height="150"></a>
+						</td>
+						<td colspan="3" width="465"><a href="images/teacher07.jpg">
+							<img src="thumbs/teacher07.jpg" width="463" height="150"></a>
+						</td>
+					</tr>
+					<tr>
+						<td width="334">
+							Who wants to touch my briefcase? Come on people.
+						</td>
+						<td width="148">
+							Wait, wait, wait...
+						</td>
+						<td width="151">
+							Don't sharpen your pencil, I'm thinking.
+						</td>
+						<td width="154">
+							Okay, I'm done thinking now.
+						</td>
+					</tr>
+					<tr>
+						<td width="334">
+							<a href="images/teacher04.jpg"><img src="thumbs/teacher04.jpg" width="332" height="150"></a>
+						</td>
+						<td colspan="2" width="305">
+							<a href="images/teacher06.jpg"><img src="thumbs/teacher06.jpg" width="202" height="150"></a>
+						</td>
+						<td width="154">
+							<a href="images/teacher01.jpg"><img src="thumbs/teacher01.jpg" width="146" height="150"></a>
+						</td>
+					</tr>
+					<tr>
+						<td width="334">
+							If any of you can figure out a way to make your learning less of an inconvenience for me I would greatly appreciate it.
+						</td>
+						<td colspan="2" width="305">
+							Wait here, I'm going out in the hall to praise myself.
+						</td>
+						<td width="154">
+							These were all based on an actual teacher who said these things. Some of the words may have changed slightly because they are not in context, but the meaning is the same.
+						</td>
+					</tr>
+				</tbody>
 			</table>
 
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
