--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<script src='menu_var.js'></script>
-	<script src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	<div id="body">
 		<div class="article" style="text-align: center;">
@@ -24,6 +24,6 @@
 			<strong>830622</strong> folks (and/or bots) have hit the site (before I made it static and stopped counting). Thanks!
 		</div>
 	</div>
-	<script src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
