--- a/ninjahc.html
+++ b/ninjahc.html
@@ -1,34 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	
+	<style>td { padding: 3px; text-align: center; }</style>	
 	<div id="body">
 		<div class="article">
 		<h1>Comic Book</h1>
 		<p>The first comic in the Nin-Jah Fantasy.</p>
-			<table>						
-				<tr>
-					<td><a href="ninjah/ninjahpage00c.jpg"><img border="0" src="thumbs/ninjahpage00c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage01c.jpg"><img border="0" src="thumbs/ninjahpage01c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage02c.jpg"><img border="0" src="thumbs/ninjahpage02c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage03c.jpg"><img border="0" src="thumbs/ninjahpage03c.jpg"></a></td>
-				</tr>						
-				<tr>
-					<td><a href="ninjah/ninjahpage04c.jpg"><img border="0" src="thumbs/ninjahpage04c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage05c.jpg"><img border="0" src="thumbs/ninjahpage05c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage06c.jpg"><img border="0" src="thumbs/ninjahpage06c.jpg"></a></td>					
-					<td><a href="ninjah/ninjahpage07c.jpg"><img border="0" src="thumbs/ninjahpage07c.jpg"></a></td>
-				</tr>				
+			<table>
+				<tbody>
+					<tr>
+						<td><a href="ninjah/ninjahpage00c.jpg"><img src="thumbs/ninjahpage00c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage01c.jpg"><img src="thumbs/ninjahpage01c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage02c.jpg"><img src="thumbs/ninjahpage02c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage03c.jpg"><img src="thumbs/ninjahpage03c.jpg"></a></td>
+					</tr>						
+					<tr>
+						<td><a href="ninjah/ninjahpage04c.jpg"><img src="thumbs/ninjahpage04c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage05c.jpg"><img src="thumbs/ninjahpage05c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage06c.jpg"><img src="thumbs/ninjahpage06c.jpg"></a></td>					
+						<td><a href="ninjah/ninjahpage07c.jpg"><img src="thumbs/ninjahpage07c.jpg"></a></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
