--- a/pictures.html
+++ b/pictures.html
@@ -1,56 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	<style>td { padding: 3px; text-align: center; }</style>
 	<div id="body">
 		<div class="article">
-
 			<h1>Pictures</h1>
 			<p>These are various pictures I've made/taken in the far times. (Pictures are clickable and usually lead to a larger version.)</p>
 			<table>
-				<tr>
-					<td><a href="images/me01.jpg"><img border="0" src="thumbs/me01.jpg"></a><br>Hi, I'm <font color="#72b800">Blaise</font>.</td>
-					<td><a href="images/webtrtl1.jpg"><img border="0" src="thumbs/webtrtl1.jpg"></a><br>A self portrait.</td>
-					<td><a href="images/turtleteleport.gif"><img border="0" src="thumbs/turtleteleport.gif"></a><br>Turtles usually only teleport when no one is looking.</td>
-				</tr>
-				<tr>
-					<td><a href="images/webtrt3d.jpg"><img border="0" src="thumbs/webtrt3d.jpg"></a><br>Turtle in 3-D.</td>
-					<td><a href="images/cooltrtl.bmp"><img border="0" src="thumbs/cooltrtl.bmp"></a><br>Trippy turtle.</td>
-					<td><a href="images/turtle02.jpg"><img border="0" src="thumbs/turtle02.jpg"></a><br>This is a little turtle that visited my house.</td>
-				</tr>
-				<tr>
-					<td><a href="images/cats01.jpg"><img border="0" src="thumbs/cats01.jpg"></a><br>These are the four of the six cats that live under the deck.</td>
-					<td><a href="images/diepika1.jpg"><img border="0" src="thumbs/diepika1.jpg"></a><br>Eternal Darkness tried to knock Pikachu off my TV stand.</td>
-					<td><a href="images/turtle03.jpg"><img border="0" src="thumbs/turtle03.jpg"></a><br>It stopped to pose on the patio stones.</td>
-				</tr>
-				<tr>
-					<td><a href="images/crazyboy01.jpg"><img border="0" src="thumbs/crazyboy01.jpg"></a><br>It's <font color="#ff0000">CrazyBoy</font>!!! WOGGA!!!</td>
-					<td><a href="images/crazyboy02.jpg"><img border="0" src="thumbs/crazyboy02.jpg"></a><br>More <font color="#ff0000">CrazyBoy</font>!!!</td>
-					<td><a href="images/crazyboy04.jpg"><img border="0" src="thumbs/crazyboy04.jpg"></a><br><font color="#ff0000">CrazyBoy</font> on Caffeine!!!</td>
-				</tr>
-				<tr>
-					<td><a href="images/house01.jpg"><img border="0" src="thumbs/house01.jpg"></a><br>This is where I live.</td>
-					<td><a href="images/house2.jpg"><img border="0" src="thumbs/house2.jpg"></a><br>Another house picture.</td>
-					<td><a href="images/road1.jpg"><img border="0" src="thumbs/road1.jpg"></a><br>I took this picture while doing 55 down the road.</td>
-				</tr>			
-				<tr>
-					<td><a href="images/cav01.jpg"><img border="0" src="thumbs/cav01.jpg"></a><br>This is my spiffy Cavalier.</td>
-					<td><a href="images/van1.jpg"><img border="0" src="thumbs/van1.jpg"></a><br>This is the van I drove while I saved up for a new car.</td>
-					<td><a href="images/tempo2.jpg"><img border="0" src="thumbs/tempo2.jpg"></a><br>This is a really bad pictures of my old Ford Tempo.</td>
-				</tr>				
-				<tr>
-					<td colspan=3><a href="kmart-pics.html">Kmart Pictures</a> | <a href="drawings.html">Drawings</a> | <a href="pixels.html">Pixel Art</a> | <a href="comics.html">Comics</a> | <a href="ninjahc.html">Nin-Jah Comic Book</a></td>
-				</tr>
+				<tbody>
+					<tr>
+						<td><a href="images/me01.jpg"><img src="thumbs/me01.jpg"></a><br>Hi, I'm <span class="blaise">Blaise</span>.</td>
+						<td><a href="images/webtrtl1.jpg"><img src="thumbs/webtrtl1.jpg"></a><br>A self portrait.</td>
+						<td><a href="images/turtleteleport.gif"><img src="thumbs/turtleteleport.gif"></a><br>Turtles usually only teleport when no one is looking.</td>
+					</tr>
+					<tr>
+						<td><a href="images/webtrt3d.jpg"><img src="thumbs/webtrt3d.jpg"></a><br>Turtle in 3-D.</td>
+						<td><a href="images/cooltrtl.bmp"><img src="thumbs/cooltrtl.bmp"></a><br>Trippy turtle.</td>
+						<td><a href="images/turtle02.jpg"><img src="thumbs/turtle02.jpg"></a><br>This is a little turtle that visited my house.</td>
+					</tr>
+					<tr>
+						<td><a href="images/cats01.jpg"><img src="thumbs/cats01.jpg"></a><br>These are the four of the six cats that live under the deck.</td>
+						<td><a href="images/diepika1.jpg"><img src="thumbs/diepika1.jpg"></a><br>Eternal Darkness tried to knock Pikachu off my TV stand.</td>
+						<td><a href="images/turtle03.jpg"><img src="thumbs/turtle03.jpg"></a><br>It stopped to pose on the patio stones.</td>
+					</tr>
+					<tr>
+						<td><a href="images/crazyboy01.jpg"><img src="thumbs/crazyboy01.jpg"></a><br>It's <span class="crazyboy">CrazyBoy</span>!!! WOGGA!!!</td>
+						<td><a href="images/crazyboy02.jpg"><img src="thumbs/crazyboy02.jpg"></a><br>More <span class="crazyboy">CrazyBoy</span>!!!</td>
+						<td><a href="images/crazyboy04.jpg"><img src="thumbs/crazyboy04.jpg"></a><br><span class="crazyboy">CrazyBoy</span> on Caffeine!!!</td>
+					</tr>
+					<tr>
+						<td><a href="images/house01.jpg"><img src="thumbs/house01.jpg"></a><br>This is where I live.</td>
+						<td><a href="images/house2.jpg"><img src="thumbs/house2.jpg"></a><br>Another house picture.</td>
+						<td><a href="images/road1.jpg"><img src="thumbs/road1.jpg"></a><br>I took this picture while doing 55 down the road.</td>
+					</tr>			
+					<tr>
+						<td><a href="images/cav01.jpg"><img src="thumbs/cav01.jpg"></a><br>This is my spiffy Cavalier.</td>
+						<td><a href="images/van1.jpg"><img src="thumbs/van1.jpg"></a><br>This is the van I drove while I saved up for a new car.</td>
+						<td><a href="images/tempo2.jpg"><img src="thumbs/tempo2.jpg"></a><br>This is a really bad pictures of my old Ford Tempo.</td>
+					</tr>				
+					<tr>
+						<td colspan="3"><a href="kmart-pics.html">Kmart Pictures</a> | <a href="drawings.html">Drawings</a> | <a href="pixels.html">Pixel Art</a> | <a href="comics.html">Comics</a> | <a href="ninjahc.html">Nin-Jah Comic Book</a></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
