--- a/pixels.html
+++ b/pixels.html
@@ -1,36 +1,39 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	
+	<style>td { padding: 3px; text-align: center; }</style>	
 	<div id="body">
 		<div class="article">
 			<h1>Pixel Art</h1>
 			<p>Drawn one pixel at a time.</p>
-			<table>				
-	  			<tr>
-	    			<td><img border="0" src="pixels/ctavatar01.gif"><br>Clay Turtle</td>	    			
-	    			<td><img border="0" src="pixels/fire01.gif"><br>Fire</td>				    
-				    <td><img border="0" src="pixels/ice01.gif"><br>Ice</td>				    
-				    <td><img border="0" src="pixels/colinsick_ct_50x50.gif"><br>Colin Sick Fan Club</td>				    
-				    <td><img border="0" src="pixels/posed02.gif"><br>Soldier</td>
-	  			</tr>				
-	  			<tr>
-	    			<td><img border="0" src="pixels/ninfan.bmp"><br>Nin-Jah Fantasy</td>	    			
-	    			<td><img border="0" src="pixels/Nee.bmp"><br>Nee</td>				    
-				    <td><img border="0" src="pixels/Shin.bmp"><br>Shin</td>				    
-				    <td><img border="0" src="pixels/Toe.bmp"><br>Toe</td>				    
-				    <td><img border="0" src="pixels/Wang.bmp"><br>Wang</td>
-	  			</tr>				
+			<table>
+				<tbody>
+					<tr>
+						<td><img src="pixels/ctavatar01.gif"><br>Clay Turtle</td>	    			
+						<td><img src="pixels/fire01.gif"><br>Fire</td>				    
+						<td><img src="pixels/ice01.gif"><br>Ice</td>				    
+						<td><img src="pixels/colinsick_ct_50x50.gif"><br>Colin Sick Fan Club</td>				    
+						<td><img src="pixels/posed02.gif"><br>Soldier</td>
+					</tr>				
+					<tr>
+						<td><img src="pixels/ninfan.bmp"><br>Nin-Jah Fantasy</td>	    			
+						<td><img src="pixels/Nee.bmp"><br>Nee</td>				    
+						<td><img src="pixels/Shin.bmp"><br>Shin</td>				    
+						<td><img src="pixels/Toe.bmp"><br>Toe</td>				    
+						<td><img src="pixels/Wang.bmp"><br>Wang</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
