--- a/wallpapers.html
+++ b/wallpapers.html
@@ -1,81 +1,81 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	
+	<style>td { padding: 3px; text-align: center; }</style>	
 	<div id="body">
 		<div class="article">
-
 			<h1>Wallpapers</h1>
 			<p>These are some wallpapers for your desktop.</p>
-
 			<table>
-				<tr>
-					<td>
-						<img border="0" src="thumbs/bunnypicwp.jpg" width="300" height="240">
-					</td>
-					<td>
-						<img border="0" src="thumbs/christmas2wp.jpg" width="300" height="240">
-					</td>
-					<td>
-						<img border="0" src="thumbs/shuttle2wp.jpg" width="300" height="240">
-					</td>
-				</tr>
-				<tr>
-					<td align=center>
-						<a href="images/bunnypic800.jpg">800 x 600</a><br>
-						<a href="images/bunnypic1024.jpg">1024 x 768</a><br>
-						<a href="images/bunnypic1280.jpg">1280 x 1024</a>
-					</td>
-					<td align=center>
-						<a href="images/christmas2800.jpg">800 x 600</a><br>
-						<a href="images/christmas21024.jpg">1024 x 768</a><br>
-						<a href="images/christmas21280.jpg">1280 x 1024</a>
-					</td>
-					<td align=center>
-						<a href="images/shuttle2800.jpg">800 x 600</a><br>
-						<a href="images/shuttle21024.jpg">1024 x 768</a><br>
-						<a href="images/shuttle21280.jpg">1280 x 1024</a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img border="0" src="thumbs/ninjahwp.jpg" width="300" height="240">
-					</td>
-					<td>
-						<img border="0" src="thumbs/beachwp.jpg" width="300" height="240">
-					</td>
-					<td>
-						<img border="0" src="thumbs/gargoylewp.jpg" width="300" height="240">
-					</td>
-				</tr>
-				<tr>
-					<td align=center>
-						<a href="images/ninjah800.jpg">800 x 600</a><br>
-						<a href="images/ninjah1024.jpg">1024 x 768</a><br>
-						<a href="images/ninjah1280.jpg">1280 x 1024</a>
-					</td>
-					<td align=center>
-						<a href="images/beach800.jpg">800 x 600</a><br>
-						<a href="images/beach1024.jpg">1024 x 768</a><br>
-						<a href="images/beach1280.jpg">1280 x 1024</a>
-					</td>
-					<td align=center>
-						<a href="images/gargoyle800.jpg">800 x 600</a><br>
-						<a href="images/gargoyle1024.jpg">1024 x 768</a><br>
-						<a href="images/gargoyle1280.jpg">1280 x 1024</a>
-					</td>
-				</tr>
+				<tbody>
+					<tr>
+						<td>
+							<img src="thumbs/bunnypicwp.jpg" width="300" height="240">
+						</td>
+						<td>
+							<img src="thumbs/christmas2wp.jpg" width="300" height="240">
+						</td>
+						<td>
+							<img src="thumbs/shuttle2wp.jpg" width="300" height="240">
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<a href="images/bunnypic800.jpg">800 x 600</a><br>
+							<a href="images/bunnypic1024.jpg">1024 x 768</a><br>
+							<a href="images/bunnypic1280.jpg">1280 x 1024</a>
+						</td>
+						<td>
+							<a href="images/christmas2800.jpg">800 x 600</a><br>
+							<a href="images/christmas21024.jpg">1024 x 768</a><br>
+							<a href="images/christmas21280.jpg">1280 x 1024</a>
+						</td>
+						<td>
+							<a href="images/shuttle2800.jpg">800 x 600</a><br>
+							<a href="images/shuttle21024.jpg">1024 x 768</a><br>
+							<a href="images/shuttle21280.jpg">1280 x 1024</a>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<img src="thumbs/ninjahwp.jpg" width="300" height="240">
+						</td>
+						<td>
+							<img src="thumbs/beachwp.jpg" width="300" height="240">
+						</td>
+						<td>
+							<img src="thumbs/gargoylewp.jpg" width="300" height="240">
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<a href="images/ninjah800.jpg">800 x 600</a><br>
+							<a href="images/ninjah1024.jpg">1024 x 768</a><br>
+							<a href="images/ninjah1280.jpg">1280 x 1024</a>
+						</td>
+						<td>
+							<a href="images/beach800.jpg">800 x 600</a><br>
+							<a href="images/beach1024.jpg">1024 x 768</a><br>
+							<a href="images/beach1280.jpg">1280 x 1024</a>
+						</td>
+						<td>
+							<a href="images/gargoyle800.jpg">800 x 600</a><br>
+							<a href="images/gargoyle1024.jpg">1024 x 768</a><br>
+							<a href="images/gargoyle1280.jpg">1280 x 1024</a>
+						</td>
+					</tr>
+				</tbody>
 			</table>
-
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
