--- a/i-show.html
+++ b/i-show.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src="menu_var.js"></script>
+	<script src="menu_com.js"></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	
 	<div id="body">
@@ -38,6 +39,6 @@
 			</p>		
 		</div>
 	</div>
-	<script type='text/javascript' src='header_footer.js'></script>
+	<script src="header_footer.js"></script>
 </body>
 </html>
