Remove the old javascript menu, replace with new css menu.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<script src="menu_var.js"></script>
+	<!-- <script src="menu_var.js"></script>
 	<script src="menu_com.js"></script>
-	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
+	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript> -->	
 	<div id="body">
 		<div class="article" style="text-align: center;">
 			<h1>Welcome to Turtle-IS.com</h1>
