--- a/updates.html
+++ b/updates.html
@@ -6,9 +6,6 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script src="menu_var.js"></script>
-	<script src="menu_com.js"></script>
-	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	<style>td { padding: 3px; border: 0 none; vertical-align: top; }</style>
 	<div id="body">
 		<div class="article">
@@ -16,6 +13,13 @@
       <p style="text-align: center;">It's the site's webmaster <img src="images/mabgoing.gif" width=160 height=46> Mr. Alien But (that's one 't', not two!)</p>
       <table width=995>
         <tbody>
+          <tr>
+            <td colspan=2><hr><h3 class="label">Me - 5/20/25 - 7:29 pm</h3></td>
+          </tr>
+          <tr>
+            <td><img src="images/claythumb01.jpg"><p><br></p></td>
+            <td>Swapped out the old javascript menu with one I wrote myself in CSS. Now with rounded corners and drop shadows and no images, we truly live in the future.</td>
+          </tr>
           <tr>
             <td colspan=2><hr><h3 class="label">Me - 5/17/25 - 9:32 pm</h3></td>
           </tr>
