D&D, music, fixed the menu styles

--- a/updates.html
+++ b/updates.html
@@ -14,6 +14,13 @@
       <table width=995>
         <tbody>
           <tr>
+            <td colspan=2><hr><h3 class="label">Me - 5/22/25 - 5:17:29 pm</h3></td>
+          </tr>
+          <tr>
+            <td><img src="images/claythumb01.jpg"><p><br></p></td>
+            <td>Added a page with my <a href="./dnd-characters.html">D&D Characters</a>. I want to add pictures and write more about each of them, but for now it is just a glorious list with links to their character sheets on <a href="https://www.dndbeyond.com" target="_blank">D&D Beyond</a>. I also put my <a href="./untitled-song.html">jaunty little song</a> into an audio player so you don't have to download a file to listen to it.</td>
+          </tr>
+          <tr>
             <td colspan=2><hr><h3 class="label">Me - 5/20/25 - 7:29 pm</h3></td>
           </tr>
           <tr>
